--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-      <sebm-google-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" [disableDefaultUI]=false [zoomControl]="false" (mapClick)="mapClicked($event)">
+      <sebm-google-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" [disableDefaultUI]="false" [zoomControl]="false" (mapClick)="mapClicked($event)">
         <sebm-google-map-marker *ngFor="let m of markers;let i = index" (markerClick)="clickedMarker(m,i)" [latitude]="m.lat" [longitude]="m.lng"
           [markerDraggable]="m.draggable" (dragEnd)="markerDragEnd(m,$event)">
           <sebm-google-map-info-window>
@@ -17,7 +17,7 @@
           <h3 class="panel-title">Add New Marker</h3>
         </div>
         <div class="panel-body">
-          <form class="form" (ngSubmit)="addMarker()">
+          <form class="form" (submit)="addMarker()">
             <div class="row">
               <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
                 <div class="form-group">
@@ -37,8 +37,8 @@
               <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
                 <div class="form-group">
                   <select class="form-control" [(ngModel)]="markerDraggable" name="markerDraggable">
-                    <option value="false">No</option>
-                    <option value="true">Yes</option>
+                    <option value=false>No</option>
+                    <option value=true>Yes</option>
                   </select>
                 </div>
               </div>
@@ -51,6 +51,8 @@
           </form>
         </div>
       </div>
+      <!-- List -->
+     <app-marker-list [markers]="markers"></app-marker-list>
     </div>
   </div>
 </div>
