--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-      <sebm-google-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" [disableDefaultUI]="false" [zoomControl]="false" (mapClick)="mapClicked($event)">
-        <sebm-google-map-marker *ngFor="let m of markers;let i = index" (markerClick)="clickedMarker(m,i)" [latitude]="m.lat" [longitude]="m.lng"
+      <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" [disableDefaultUI]="false" [zoomControl]="false" (mapClick)="mapClicked($event)">
+        <agm-marker *ngFor="let m of markers;let i = index" (markerClick)="clickedMarker(m,i)" [latitude]="m.lat" [longitude]="m.lng"
           [markerDraggable]="m.draggable" (dragEnd)="markerDragEnd(m,$event)">
-          <sebm-google-map-info-window>
+          <agm-info-window>
             <strong>{{ m.name }}</strong>
-          </sebm-google-map-info-window>
-        </sebm-google-map-marker>
-      </sebm-google-map>
+          </agm-info-window>
+        </agm-marker>
+      </agm-map>
     </div>
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
       <br/>
